tests/ui/typeck/issue-89806.rs
fn main() {
    0u8.as_ref(); //~ ERROR no method named `as_ref` found for type `u8` in the current scope
}

// ferrocene-annotations: fls_z7q8kbjwdc7g
// Method Call Expressions
//
// ferrocene-annotations: fls_wqazkzle0ix9
// Method Resolution
